Migrate to Spark 3.5.4 and make config/IO fully externalized